# freertos_tzm_GC9A01A

./: README.md  build_all.sh  build_debug.sh  build_release.sh  clean.sh  commandFile.jlink  start_gdbserver.sh
freertos_GC9A01A_ns/cm33_core0/: freertos_blinky_ns_v3_10.xml  main_ns.c  readme.txt
freertos_GC9A01A_ns/cm33_core0/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh
freertos_GC9A01A_s/cm33_core0/: freertos_blinky_s_v3_10.xml  main_s.c  nsc_functions.c  nsc_functions.h  pin_mux.c  pin_mux.h
freertos_GC9A01A_s/cm33_core0/armgcc/: .gitignore  CMakeLists.txt  flags.cmake
